Fetch images from Unsplash API

--- a/example/app/index.html
+++ b/example/app/index.html
@@ -25,7 +25,7 @@
         <div class="actions actions-prev">⬅️</div>
         <div class="actions actions-next">➡️</div>
         <ul class="slider">
-          <li class="cell -active">
+          <li class="cell">
             <div class="cell-wrapper">
               <img src="assets/example_assets_joshua-gresham-kBoV339ufdU-unsplash.jpg" alt="Joshua Gresham" />
             </div>
@@ -37,7 +37,10 @@
           </li>
           <li class="cell">
             <div class="cell-wrapper">
-              <img src="assets/example_assets_joshua-gresham-kBoV339ufdU-unsplash.jpg" alt="Joshua Gresham" />
+              <img
+                data-lazy="https://images.unsplash.com/photo-1552452380-4137214f33b6?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MXwyMTI1NjJ8MHwxfHRvcGljfHw2c01WalRMU2tlUXx8fHx8Mnw&ixlib=rb-1.2.1&q=80&w=400"
+                alt="low-angle photography of sun and body of water"
+              />
             </div>
           </li>
           <li class="cell">
