--- a/example/app/index.html
+++ b/example/app/index.html
@@ -5,14 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Example</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Oswald:wght@200&family=Playfair+Display:wght@500&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header class="header">
-      <h1>Blog name</h1>
+      <h1>Blog name 👋</h1>
     </header>
-    <div class="hero"></div>
+    <div class="hero">
+      <h2 class="hero--header">✨ Hero ✨</h2>
+    </div>
     <div class="content">
-      <h2 class="content--header">Post title</h2>
+      <h3 class="content--header">Post title</h3>
       <p class="content--text -top">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure est numquam ratione sed quasi iusto possimus,
         delectus magni a cupiditate, nisi quam illo id. Qui perferendis recusandae ipsum dolores nemo.
@@ -68,9 +75,8 @@
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure est numquam ratione sed quasi iusto possimus,
         delectus magni a cupiditate, nisi quam illo id. Qui perferendis recusandae ipsum dolores nemo.
       </p>
-
       <div class="aside">
-        <h2 class="aside--header">Aside Header</h2>
+        <h3 class="aside--header">Aside Header</h3>
         <ul class="aside--list">
           <li>Lorem</li>
           <li>Ipsum</li>
@@ -80,5 +86,8 @@
         </ul>
       </div>
     </div>
+    <footer class="footer">
+      <h5>A simple footer 🦶</h5>
+    </footer>
   </body>
 </html>
