--- a/example/app/index.html
+++ b/example/app/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Example</title>
+    <title>Example 🧪</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Oswald:wght@200&family=Playfair+Display:wght@500&display=swap"
@@ -28,7 +28,7 @@
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure est numquam ratione sed quasi iusto possimus,
         delectus magni a cupiditate, nisi quam illo id. Qui perferendis recusandae ipsum dolores nemo.
       </p>
-      <div class="content--slider example">
+      <div class="content--slider slider-dmtk--container">
         <ul class="slider">
           <li class="cell">
             <div class="cell-wrapper">
